'larger' and 'smaller' CSS values for 'font-size' were not working outside of range xx-small to xx-large and that prevented users to use very big and very small fonts in both Composer and mail composition; b=63987, r=dbaron, sr=bzbarsky